// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`change selection respects token budget 1`] = `
"Recent changes:
poem.txt:4:4
-recent
\\ No newline at end of file
+recent_changed
\\ No newline at end of file


Current context (│ marks cursor position):
poem.txt:1:4
│Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

Predict the most likely next edit the user will make."
`;

exports[`context recent changes to requested count 1`] = `
"Recent changes:
poem.txt:1:1
-0
\\ No newline at end of file
+1
\\ No newline at end of file

poem.txt:1:1
-1
\\ No newline at end of file
+2
\\ No newline at end of file

poem.txt:1:1
-2
\\ No newline at end of file
+3
\\ No newline at end of file

poem.txt:1:1
-3
\\ No newline at end of file
+4
\\ No newline at end of file

poem.txt:1:1
-4
\\ No newline at end of file
+5
\\ No newline at end of file

poem.txt:1:1
-5
\\ No newline at end of file
+6
\\ No newline at end of file

poem.txt:1:1
-6
\\ No newline at end of file
+7
\\ No newline at end of file

poem.txt:1:1
-7
\\ No newline at end of file
+8
\\ No newline at end of file

poem.txt:1:1
-8
\\ No newline at end of file
+9
\\ No newline at end of file

poem.txt:1:1
-9
\\ No newline at end of file
+10
\\ No newline at end of file


Current context (│ marks cursor position):
poem.txt:1:4
│Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

Predict the most likely next edit the user will make."
`;

exports[`context window trims to 10 lines before and after cursor 1`] = `
"Recent changes:


Current context (│ marks cursor position):
test-long-file.txt:15:35
Line 15
Line 16
Line 17
Line 18
Line 19
Line 20
Line 21
Line 22
Line 23
Line 24
│Line 25
Line 26
Line 27
Line 28
Line 29
Line 30
Line 31
Line 32
Line 33
Line 34
Line 35

Predict the most likely next edit the user will make."
`;

exports[`prediction after making edits 1`] = `
"Recent changes:
poem.txt:1:4
 Moonlight whispers through the trees,
-Silver shadows dance with ease.
+Silver Starlight dance with ease.
 Stars above like diamonds bright,
 Paint their stories in the night.
\\ No newline at end of file


Current context (│ marks cursor position):
poem.txt:1:4
Moonlight whispers through the trees,
Silver Starlight dance with ease.
Stars above like diamonds bright,
Paint their stories│ in the night.

Predict the most likely next edit the user will make."
`;
